// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PRs/Status Closed smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-sm align-middle btn-neutral cursor-default"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 pt-1 flex-none fill-neutral-content"
  >
    <path d="M3.25 1A2.25 2.25 0 0 1 4 5.372v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.251 2.251 0 0 1 3.25 1m9.5 5.5a.75.75 0 0 1 .75.75v3.378a2.251 2.251 0 1 1-1.5 0V7.25a.75.75 0 0 1 .75-.75m-2.03-5.273a.75.75 0 0 1 1.06 0l.97.97l.97-.97a.748.748 0 0 1 1.265.332a.75.75 0 0 1-.205.729l-.97.97l.97.97a.751.751 0 0 1-.018 1.042a.751.751 0 0 1-1.042.018l-.97-.97l-.97.97a.749.749 0 0 1-1.275-.326a.749.749 0 0 1 .215-.734l.97-.97l-.97-.97a.75.75 0 0 1 0-1.06ZM2.5 3.25a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0M3.25 12a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m9.5 0a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5">
    </path>
  </svg>
  Closed
</div>
`;

exports[`PRs/Status Draft smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-sm align-middle btn-neutral cursor-default"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 pt-1 flex-none fill-neutral-content"
  >
    <path d="M3.25 1A2.25 2.25 0 0 1 4 5.372v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.251 2.251 0 0 1 3.25 1m9.5 14a2.25 2.25 0 1 1 0-4.5a2.25 2.25 0 0 1 0 4.5M2.5 3.25a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0M3.25 12a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m9.5 0a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5M14 7.5a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0m0-4.25a1.25 1.25 0 1 1-2.5 0a1.25 1.25 0 0 1 2.5 0">
    </path>
  </svg>
  Draft
</div>
`;

exports[`PRs/Status Loading smoke-test 1`] = `
<div class="skeleton w-28 h-8 rounded-md">
</div>
`;

exports[`PRs/Status Merged smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-sm align-middle btn-primary cursor-default"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 16 16"
       class="h-5 w-5 pt-1 flex-none fill-primary-content"
  >
    <path d="M5.45 5.154A4.25 4.25 0 0 0 9.25 7.5h1.378a2.251 2.251 0 1 1 0 1.5H9.25A5.734 5.734 0 0 1 5 7.123v3.505a2.25 2.25 0 1 1-1.5 0V5.372a2.25 2.25 0 1 1 1.95-.218M4.25 13.5a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5m8.5-4.5a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5M5 3.25a.75.75 0 1 0 0 .005z">
    </path>
  </svg>
  Merged
</div>
`;

exports[`PRs/Status Open Edit Mode smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-success btn-sm align-middle"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 18 18"
       class="h-5 w-5 pt-1 flex-none fill-success-content"
  >
    <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
    </path>
  </svg>
  Open
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 24 24"
       class="h-5 w-5s flex-none fill-success-content"
  >
    <path fill="currentColor"
          d="M11.646 15.146L5.854 9.354a.5.5 0 0 1 .353-.854h11.586a.5.5 0 0 1 .353.854l-5.793 5.792a.5.5 0 0 1-.707 0"
    >
    </path>
  </svg>
</div>
`;

exports[`PRs/Status Open smoke-test 1`] = `
<div tabindex="0"
     role="button"
     class="btn btn-success btn-sm align-middle cursor-default"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       viewbox="0 0 18 18"
       class="h-5 w-5 pt-1 flex-none fill-success-content"
  >
    <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25m5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354M3.75 2.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m0 9.5a.75.75 0 1 0 0 1.5a.75.75 0 0 0 0-1.5m8.25.75a.75.75 0 1 0 1.5 0a.75.75 0 0 0-1.5 0">
    </path>
  </svg>
  Open
</div>
`;
